tests/ui/traits/normalize/normalize-diverging-alias-in-struct.next.stderr
error[E0275]: overflow evaluating the requirement `<u8 as Trait>::Diverges<u8> == _`
  --> $DIR/normalize-diverging-alias-in-struct.rs:21:12
   |
LL |     field: Box<<u8 as Trait>::Diverges<u8>>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0275]: overflow evaluating whether `Box<<u8 as Trait>::Diverges<u8>>` is well-formed
  --> $DIR/normalize-diverging-alias-in-struct.rs:21:12
   |
LL |     field: Box<<u8 as Trait>::Diverges<u8>>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0275`.
